[package]
name = "erwl"
version = "0.0.1"
edition = "2021"

[features]
sync-extractor = []
async-extractor = []
sync-loader = []
async-loader = []
sync-reader = []
async-reader = []
sync-writer = []
async-writer = []
extractor-file = ["sync-extractor"]
reader-csv = ["sync-reader"]
reader-json = ["sync-reader"]
writer-parquet = ["parquet", "sync-writer"]
writer-csv = ["sync-writer"]
writer-json = ["sync-writer"]
loader-s3 = ["aws-config", "aws-sdk-s3", "aws-types", "async-loader"]
loader-gcs = ["google-cloud-auth", "reqwest", "async-loader"]

[dependencies]
aws-config = { version = "0.12.0", optional = true }
aws-sdk-s3 = { version = "0.12.0", optional = true }
aws-types = { version = "0.12.0", optional = true }
arrow = { version = "15.0.0" }
clap = "3"
parquet = {version = "15.0.0", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
google-cloud-auth = { version = "0.2.0", optional = true }
reqwest = { version = "0.11.10", optional = true }
tokio = { version = "1", features = ["full"] }