[package]
name = "erwl"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[features]
extractor = []
loader = []
reader = []
writer = []
extractor-dummy = ["extractor"]
extractor-local = ["extractor"]
extractor-postgresql = ["extractor", "sqlx/runtime-tokio-rustls", "sqlx/postgres", "sqlx/chrono"]
extractor-js = ["deno_core", "nix", "tempfile", "extractor"]
reader-csv = ["reader"]
reader-json = ["reader"]
writer-parquet = ["parquet", "writer"]
writer-csv = ["writer"]
writer-json = ["writer"]
loader-dummy = ["loader"]
loader-s3 = ["aws-config", "aws-sdk-s3", "aws-types", "loader"]
loader-gcs = ["google-cloud-auth", "reqwest", "loader"]
loader-local = ["loader"]

[dependencies]
aws-config = { version = "0.12.0", optional = true }
aws-sdk-s3 = { version = "0.12.0", optional = true }
aws-types = { version = "0.12.0", optional = true }
arrow = { version = "15.0.0" }
clap = "3"
futures = { version = "0.3.21" }
futures-core = { version = "0.3.21" }
parquet = {version = "15.0.0", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
sqlx = { version = "0.6", optional = true }
google-cloud-auth = { version = "0.2.0", optional = true }
reqwest = { version = "0.11.10", optional = true }
tokio = { version = "1", features = ["full"] }
deno_core = { version = "0.139.0", optional = true }
nix = { version = "0.24.1", optional = true }
tempfile = { version = "3.3.0", optional = true }

[build-dependencies]
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.11"